Finish final styling and spacing issues, styled the ingredients and decriptions

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
     background-color: #DAF7F6;
     color: #3B3B3B;
-    font-family: 'Open Sans'sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 12px;
     line-height: 16px;
 }
@@ -17,8 +17,8 @@ header {
 h1 {
     display: inline-block;
     margin: 0;
-    padding: 25px 0;
-    font-family: 'Montserrat'sans-serif;
+    padding: 40px 0;
+    font-family: 'Montserrat', sans-serif;
     color: #F16059;
     font-size: 48px;
     font-weight: bold;
@@ -26,23 +26,22 @@ h1 {
 }
 
 header img {
-    margin-right: 20px;
+    margin-right: 16px;
 }
 
 /*------ Main Content stlyes-------*/
 
 main {
     height: 1000px;
-    margin: 0 60px;
+    margin: 0 auto;
 }
 
 /*------ Card stlyes-------*/
 
 .card {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    clear: none;
+    margin: 25px 0;
     overflow: auto;
+    padding-left: 275px;
 }
 
 .image {
@@ -76,67 +75,93 @@ main {
     background-size: cover;
 }
 
-/*------ Recipes text section stlyes-------*/
+/*------ Recipes time stlyes-------*/
 
 .recipe h2 {
     color: #F16059;
     font-size: 24px;
-    font-family: 'Montserrat'sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
-    margin-top: 20px;
+    margin-top: 0;
+    line-height: 18px;
 }
-
 
 .time {
     border: 1px #3B3B3B solid;
     margin-bottom: 20px;
-    text-transform: uppercase;
-    overflow: hidden;
-
+    overflow: auto;
 }
+
+.time .prep,
+.time .total,
+.time .cook {
+    float: left;
+    width: 33.3333%;
+    height: 30px;
+    box-sizing: border-box;
+    padding-left: 6px;
+    text-transform: uppercase;
+  }
 
 .time .cook {
     border-right: 1px #3B3B3B solid;
     border-left: 1px #3B3B3B solid;
-    float: left;
-    padding-left: 6px;
-    width: 33%;
-    height: auto;
-    box-sizing: border-box;
-    padding: 5px 0;
-}
-
-.time .prep {
-    float: left;
-    padding-left: 6px;
-    width: 33%;
-    height: auto;
-    box-sizing: border-box;
-    padding: 5px 0;
-}
-
-.time .total {
-    float: left;
-    padding-left: 6px;
-    width: 33%;
-    height: auto;
-    box-sizing: border-box;
-    padding: 5px 0;
 }
 
 .time img {
     width: 15px;
     height: auto;
     vertical-align: middle;
-    margin: 0 6px;
+    margin-right: 6px;
+    padding-top: 8px;
 }
 
 .time-details {
     display: inline;
+    margin: 0;
     vertical-align: middle;
+    padding-top: 6px;
 }
 
 .time strong {
-    font-family: 'Montserrat'sans-serif;
+    font-family: 'Montserrat', sans-serif;
+}
+
+/*------ Recipes/Direction section stlyes-------*/
+
+.columns {
+    overflow: auto;
+}
+
+.directions {
+    float: left;
+    width: 240px;
+}
+
+.ingredients {
+    float: left;
+    width: 205px;
+    margin-right: 15px;
+}
+
+.recipe h3 {
+    color: #F16059;
+    padding: 6px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    border-top: 1px #3B3B3B solid;
+    border-bottom: 1px #3B3B3B solid;
+}
+
+.ingredients ul {
+    padding-left: 15px;
+    line-height: 24px;
+    list-style-type: square;
+}
+
+.directions ol {
+    padding-left: 15px;
+    line-height: 24px;
 }
